fixed overflow x

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+html {
+    overflow-x: hidden;
+}
 .name{
     font-size: 55px;
     font-weight: bold;
